--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -54,19 +54,24 @@
         app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <EditText
+    <com.mukesh.OtpView
         android:id="@+id/edt_otp_code"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="40dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
+        android:inputType="number"
+        android:textSize="30sp"
+        android:fontFamily="@font/ibm_plex_sans_semi_bold"
+        app:itemCount="6"
+        app:itemSpacing="16dp"
+        app:itemWidth="42dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_otp_sent_to" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_otp_sent_to"
+        app:lineColor="@color/dark"
+        app:viewType="line" />
 
     <TextView
         android:id="@+id/tv_countdown"
