refractor project package

--- a/app/src/main/res/layout/fragment_loan.xml
+++ b/app/src/main/res/layout/fragment_loan.xml
@@ -38,7 +38,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".view.fragment.LoanFragment" />
+            tools:context=".view.main.loan.LoanFragment" />
 
     </androidx.core.widget.NestedScrollView>
 
