--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context=".view.fragment.notification.MessageFragment">
+    tools:context=".view.main.notification.MessageFragment">
 
     <ImageView
         android:id="@+id/imageView5"
