--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
-    tools:context=".view.fragment.NotificationFragment">
+    tools:context=".view.main.notification.NotificationFragment">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_notification"
