--- a/app/src/main/res/drawable/bg_white_rounded_border_grey_6.xml
+++ b/app/src/main/res/drawable/bg_white_rounded_border_grey_6.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/white"/>
-    <corners android:radius="6dp"/>
-    <stroke
-        android:width="1dp"
-        android:color="@color/colorPrimary"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/transparent"/>
+        </shape>
+    </item>
+
+    <item android:top="-2dp" android:right="-2dp" android:left="-2dp">
+        <shape>
+            <solid android:color="@color/transparent"/>
+            <stroke
+                android:width="2dp"
+                android:color="@color/dark"/>
+        </shape>
+    </item>
+</layer-list>
