--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -75,7 +75,7 @@
 
     <byc.avt.avanteeborrower.helper.widget.PinViewEditText
         android:id="@+id/edt_otp_code"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:focusable="true"
@@ -120,7 +120,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_state_selector"
-        android:enabled="false"
+        android:enabled="true"
         android:letterSpacing="0.01"
         android:text="@string/verify"
         android:textAllCaps="false"
