--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="dark">#374553</color>
     <color name="white">#FFFFFF</color>
     <color name="overlay">#80374553</color>
+    <color name="transparent">#00000000</color>
 
     <!-- Background -->
     <color name="neutral">#F0D2D5DB</color>
