--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightest_neutral"
-    tools:context=".view.misc.MainActivity">
+    tools:context=".view.main.MainActivity">
 
     <FrameLayout
         android:id="@+id/container_layout"
