--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.intro.NoticeActivity">
+    tools:context=".view.misc.NoticeActivity">
 
     <ImageView
         android:id="@+id/imageView4"
