--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,14 +6,22 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/lightest_neutral</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:fontFamily">@font/ibm_plex_sans</item>
         <item name="actionBarStyle">@style/AppTheme.ActionBar</item>
+        <item name="android:textColor">@color/dark</item>
+    </style>
+
+    <style name="tab_text" parent="@android:style/TextAppearance.Widget.TabWidget">
+        <item name="android:fontFamily">@font/ibm_plex_sans</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="AppTheme.ActionBar" parent="Widget.AppCompat.Light.ActionBar">
         <item name="android:titleTextStyle">@style/AppTheme.ActionBar.TitleText</item>
         <item name="titleTextStyle">@style/AppTheme.ActionBar.TitleText</item>
-        <item name="android:fontFamily">@font/ibm_plex_sans_semi_bold</item>
         <item name="android:height">150dp</item>
+        <item name="android:background">@color/lightest_neutral</item>
         <item name="height">60dp</item>
     </style>
 
@@ -41,8 +49,28 @@
         <item name="android:contentInsetLeft">0dp</item>
         <item name="android:fontFamily">@font/ibm_plex_sans_semi_bold</item>
         <item name="android:textSize">30sp</item>
-        <item name="android:height">150dp</item>
-        <item name="height">60dp</item>
+        <item name="android:background">@color/lightest_neutral</item>
+    </style>
+
+    <style name="ToolbarTheme.Expanded" parent="Widget.AppCompat.Light.ActionBar">
+        <item name="android:textColor">@color/dark</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:contentInsetStart">0dp</item>
+        <item name="android:contentInsetLeft">0dp</item>
+        <item name="android:fontFamily">@font/ibm_plex_sans_semi_bold</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:background">@color/lightest_neutral</item>
+    </style>
+
+    <style name="ToolbarTheme.Collapsed" parent="Widget.AppCompat.Light.ActionBar">
+        <item name="android:textColor">@color/dark</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:contentInsetStart">0dp</item>
+        <item name="android:contentInsetLeft">0dp</item>
+        <item name="android:fontFamily">@font/ibm_plex_sans_semi_bold</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
