update styling based on lender app

--- a/app/src/main/res/drawable/bg_white_rounded_8.xml
+++ b/app/src/main/res/drawable/bg_white_rounded_8.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/transparent" />
-    <item android:drawable="@color/transparent" android:state_pressed="true" />
+    <solid android:color="@color/lightest_neutral" />
+    <item android:drawable="@color/lightest_neutral" android:state_pressed="true" />
     <corners android:bottomRightRadius="@dimen/radius_default"
         android:bottomLeftRadius="@dimen/radius_default"
         android:topRightRadius="@dimen/radius_default"
