--- a/app/src/main/res/layout/layout_loan_types.xml
+++ b/app/src/main/res/layout/layout_loan_types.xml
@@ -75,7 +75,7 @@
                     android:fontFamily="@font/ibm_plex_sans"
                     android:maxLines="1"
                     android:text="@string/staff_loan_desc"
-                    android:textColor="@color/dark50"
+                    android:textColor="@color/darkO05"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_staff_loan"
                     app:layout_constraintEnd_toStartOf="@+id/iv_staff_loan_info"
@@ -158,7 +158,7 @@
                     android:fontFamily="@font/ibm_plex_sans"
                     android:maxLines="1"
                     android:text="@string/kta_loan_desc"
-                    android:textColor="@color/dark50"
+                    android:textColor="@color/darkO05"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_kta_loan"
                     app:layout_constraintEnd_toStartOf="@+id/iv_kta_loan_info"
@@ -241,7 +241,7 @@
                     android:fontFamily="@font/ibm_plex_sans"
                     android:maxLines="1"
                     android:text="@string/kuta_loan_desc"
-                    android:textColor="@color/dark50"
+                    android:textColor="@color/darkO05"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_kuta_loan"
                     app:layout_constraintEnd_toStartOf="@+id/iv_kuta_loan_info"
