--- a/app/src/main/res/drawable/bg_white_rounded_border_grey_6.xml
+++ b/app/src/main/res/drawable/bg_white_rounded_border_grey_6.xml
@@ -2,13 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/transparent"/>
+            <solid android:color="@color/lightest_neutral"/>
         </shape>
     </item>
 
     <item android:top="-2dp" android:right="-2dp" android:left="-2dp">
         <shape>
-            <solid android:color="@color/transparent"/>
+            <solid android:color="@color/lightest_neutral"/>
             <stroke
                 android:width="2dp"
                 android:color="@color/dark"/>
