--- a/app/src/main/res/layout/fragment_bank_info.xml
+++ b/app/src/main/res/layout/fragment_bank_info.xml
@@ -14,23 +14,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/text_bank_info"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
-                android:fontFamily="@font/ibm_plex_sans_semi_bold"
-                android:text="@string/bank_info"
-                android:textColor="@color/dark"
-                android:textSize="30sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_reg_form_bank_name"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -40,14 +26,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_bank_info">
+                app:layout_constraintTop_toTopOf="parent">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <AutoCompleteTextView
+                    android:id="@+id/auto_bank_name_reg_bank_info"
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
+                    android:layout_height="52dp"
+                    android:background="@android:color/transparent"
                     android:hint="@string/bank_name"
-                    android:inputType="text" />
-
+                    android:inputType="none"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="0dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -67,7 +56,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="@string/account_name"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:background="@color/lightest_neutral"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -88,7 +80,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
                 android:hint="@string/account_number"
-                android:inputType="text" />
+                android:inputType="text"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:background="@color/lightest_neutral"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
