--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -210,7 +210,7 @@
                         android:fontFamily="@font/ibm_plex_sans_medium"
                         android:text="@string/total_finished_loan"
                         android:textAllCaps="true"
-                        android:textColor="@color/dark50"
+                        android:textColor="@color/darkO05"
                         android:textSize="12sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -332,7 +332,7 @@
                         android:layout_marginEnd="16dp"
                         android:layout_marginBottom="16dp"
                         android:text="@string/no_transaction_history"
-                        android:textColor="@color/dark50"
+                        android:textColor="@color/darkO05"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
